--- a/DB/Schemas/pyway.conf
+++ b/DB/Schemas/pyway.conf
@@ -5,4 +5,4 @@ database_port: 5432
 database_name: <your_database_name>
 database_username: <your_database_username>
 database_password: <your_database_password>
-database_migration_dir: DB\Schemas\migration
+database_migration_dir: DB\Schemas\migrations
